[project]
name = "async-dashboard"
version = "1.0.0"
description = "async-dashboard"
readme = "README.md"
authors = [
    {name = "bhavani" , email = "bhavanichittawadagi76@gmail.com"}
]
requires-python = ">=3.8"
#this is production dependencies
dependencies = [
    "faker>=18.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "websockets>=10.0.0"
    
]
#development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "sphinx>=5.0.0"
]
[tool.black]
line-length = 88
target-version = ['py313']

[tool.setuptools]

package-dir = {"async-dashboard" = "."}

[tool.setuptools.packages.find]

where = ["."]